--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-	<div class="container">
+	<div class="container-fluid">
 		<div class="row">
 			<header class="col-md-12">
 				HEADER
@@ -43,6 +43,28 @@
 		<div class="col-md-6">1/2</div>
 		<div class="col-md-3">1/4</div>
 	</div>
+
+	<div class="row">
+		<div class="col-md-3">1/4</div>
+		<div class="col-md-3">1/4</div>
+		<div class="col-md-3">1/4</div>
+		<div class="col-md-3">1/4</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-3">1/4</div>
+		<div class="col-md-6">
+			<div class="col-md-6">1/4</div>
+			<div class="col-md-6">1/4</div>
+		</div>
+		<div class="col-md-3"></div>
+	</div>
+
+	<footer class="row">
+		<div class="col-md-2">1/6</div>
+		<div class="col-md-7">7/12</div>
+		<div class="col-md-3">1/4</div>
+	</footer>
 	
 	<script src="js/jquery-3.3.1.js"></script>
 	<script src="js/bootstrap.js"></script>
