--- a/index.html
+++ b/index.html
@@ -149,8 +149,82 @@
 				</p>
 			</div>
 		</div>
-
 		<!-- row 7 -->
+		<div class="row">
+			<div class="col-md-10 col-md-offset-1">
+				<table class="table table-striped table-bordered table-hover">
+					<thead>
+						<tr>	
+							<th class="success">
+								<h4 class="text-center">Free Plan</h4>
+							</th>
+							<th class="info">
+								<h4 class="text-center">Standard Plan</h4>
+							</th>
+							<th class="danger">
+								<h4 class="text-center">
+								Premium Plan
+								</h4>
+							</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>
+								<h3 class="text-center">
+									$ 0
+								</h3>
+							</td>
+							<td>
+								<h3 class="text-center">
+									$ 99
+								</h3>
+							</td>
+							<td>
+								<h3 class="text-center">
+									$ 999
+								</h3>
+							</td>
+						</tr>
+						<tr>
+							<td>Lorem ipsum</td>
+							<td>Lorem ipsum</td>
+							<td>Lorem ipsum
+							</td>
+						</tr>
+						<tr>
+							<td>Lorem ipsum</td>
+							<td>Lorem ipsum</td>
+							<td>Lorem ipsum
+							</td>
+						</tr>
+						<tr>
+							<td>Lorem ipsum</td>
+							<td>Lorem ipsum</td>
+							<td>Lorem ipsum
+							</td>
+						</tr>
+						<tr>
+							<td>-</td>
+							<td>dolor sit amet</td>
+							<td>Lorem ipsum</td>
+						</tr>
+						<tr>
+							<td>-</td>
+							<td>-</td>
+							<td>Lorem ipsum</td>
+						</tr>
+						<tr>
+							<td><a href="#" class="btn btn-success btn-block">Purchase</a></td>
+							<td><a href="#" class="btn btn-info btn-block">Purchase</a></td>
+							<td><a href="#" class="btn btn-danger btn-block">Purchase</a></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+
+		<!-- row 8 -->
 		<footer class="row jumbotron">
 			<div class="col-md-2">
 				<img src="./images/logo.png" class="img-responsive">
@@ -164,11 +238,12 @@
 					<li>Contact<a href="#"></a></li>
 				</ul>
 			</div>
+
 			<div class="col-md-3">
 				<address>
 					<strong>Name, Inc.</strong><br>
-					Address line 1 <br>
-					Address line 2 <br>
+						Address line 1 <br>
+						Address line 2 <br>
 					<abbr title="Phone">P:</abbr> (123) 456-7890
 				</address>
 			</div>
