--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<h3>
 					Add to your favorites
 					<small>
-						<kbd>
+						<kbd class="nowrap">
 							<kbd>ctr</kbd>
 							+ <kbd>d</kbd>
 						</kbd>
@@ -61,14 +61,15 @@
 
 		<!-- row 3 -->
 		<div class="row">
-			<div class="col-md-3">
-				<pre class="pre-scrollable">
+			<div class="col-md-4 col-xs-5">
+				<pre>
 					&lt;p&gt;I love programming!&lt;/p&gt;
 					&lt;p&gt;This paragraph is on my landing page&lt;/p&gt;&lt;br/&gt;&lt;br/&gt;&lt;p&gt;Bootstrap by example&lt;/p&gt;
 				</pre>
 			</div>
-			<div class="col-md-9">
-				<img src="./images/center.png" class="img-responsive" />
+			<div class="col-md-8 col-xs-7">
+				<img src="./images/center.png" class="img-responsive hidden-xs" />
+				<img src="./images/mobile.png" class="img-responsive visible-xs" />
 			</div>
 		</div>
 
