--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
 	<div class="container">
 		<!-- row 2 -->
 		<div class="row">
-			<div class="col-md-offset-4 col-md-4">
+			<div class="col-md-offset-4 col-md-4 col-sm-6 col-lg-push-4">
 				<h3>
-					Some text with 
+					Some text with
 					<small>
 						secondary text
 					</small>
 				</h3>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-6 col-lg-pull-4">
 				<h3>
 					Add to your favorites
 					<small>
@@ -61,13 +61,10 @@
 
 		<!-- row 3 -->
 		<div class="row">
-			<div class="col-md-4 col-xs-5">
-				<pre>
-					&lt;p&gt;I love programming!&lt;/p&gt;
-					&lt;p&gt;This paragraph is on my landing page&lt;/p&gt;&lt;br/&gt;&lt;br/&gt;&lt;p&gt;Bootstrap by example&lt;/p&gt;
-				</pre>
+			<div class="col-md-3 col-xs-5">
+				<pre>&lt;p&gt;I love programming!&lt;/p&gt;<br/>&lt;p&gt;This paragraph is on my landing page&lt;/p&gt;<br/>&lt;br/&gt;<br/>&lt;br/&gt;<br/>&lt;p&gt;Bootstrap by example&lt;/p&gt;</pre>
 			</div>
-			<div class="col-md-8 col-xs-7">
+			<div class="col-md-9 col-xs-7">
 				<img src="./images/center.png" class="img-responsive hidden-xs" />
 				<img src="./images/mobile.png" class="img-responsive visible-xs" />
 			</div>
@@ -75,10 +72,10 @@
 
 		<!-- row 4 -->
 		<div class="row">
-			<div class="col-md-3">
+			<div class="col-md-3 hidden-xs col-sm-3">
 				<img src="./images/bs.png" class="img-responsive" />
 			</div>
-			<div class="col-md-6">
+			<div class="col-md-6 col-xs-offset-1 col-xs-11 col-sm-6 col-sm-offset-0">
 				<blockquote>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere
@@ -92,8 +89,11 @@
 					</footer>
 				</blockquote>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-xs-7 col-sm-3">
 				<img src="images/packt.png" class="img-responsive">
+			</div>
+			<div class="col-xs-5 hidden-sm hidden-md hidden-lg">
+				<img src="./images/bs.png" class="img-responsive">
 			</div>
 		</div>
 
